mantle-build/tests/ui/service_name_mismatch.stderr
error: Could not find state struct for `Serivce`
 --> $DIR/service_name_mismatch.rs:5:5
  |
5 |     mantle::service!(Serivce);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

