mantle-build/tests/ui/service_name_mismatch.rs
#[derive(mantle::Service)]
pub struct Service;

fn main() {
    mantle::service!(Serivce);
}


